--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "db:migrate": "prisma migrate dev",
     "db:deploy": "prisma migrate deploy",
     "db:seed": "ts-node prisma/seed.ts",
-    "test": "jest",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "setup": "bash scripts/setup.sh",
@@ -33,35 +35,42 @@
     "keys:generate": "bash scripts/generate-keys.sh"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.8.1",
-    "bcrypt": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "joi": "^17.9.2",
-    "dotenv": "^16.3.1",
     "@prisma/client": "^5.1.1",
-    "express-async-errors": "^3.1.1"
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^6.8.1",
+    "helmet": "^7.0.0",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.5",
-    "typescript": "^5.1.6",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "prisma": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.45.0",
     "jest": "^29.6.1",
-    "@types/jest": "^29.5.3",
-    "ts-jest": "^29.1.1"
+    "prisma": "^5.1.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.6",
+    "vitest": "^1.6.1"
   },
-  "keywords": ["auth", "jwt", "microservice", "pokemon", "typescript"],
+  "keywords": [
+    "auth",
+    "jwt",
+    "microservice",
+    "pokemon",
+    "typescript"
+  ],
   "author": "Mateusz",
   "license": "MIT"
 }
