--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "express-rate-limit": "^6.8.1",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -57,7 +58,6 @@
     "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.45.0",
     "jest": "^29.6.1",
-    "prisma": "^5.1.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
