--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@ prisma/migrations/
 # Keys (keep them local and secure)
 keys/private.pem
 keys/public.pem
+
+# Playwright reports and artifacts
+playwright-report/
+test-results/
+blob-report/
+traces/
