--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "dev:test": "npx prisma db push && ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev:test": "node scripts/wait-db-and-push.js && ts-node-dev --respawn --transpile-only src/index.ts",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:deploy": "prisma migrate deploy",
