fix: move JWT mock spy declarations inside factory to prevent hoisting issues

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "db:migrate": "prisma migrate dev",
     "db:deploy": "prisma migrate deploy",
     "db:seed": "ts-node prisma/seed.ts",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:unit": "vitest run",
     "test:api": "bash scripts/gen-keys.sh && playwright test -c playwright.config.ts --project=API",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest run --coverage",
