--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,8 @@ JWT_EXPIRES_IN="24h"
 BCRYPT_ROUNDS=12
 
 # CORS Configuration
-CORS_ORIGIN="http://localhost:3000,http://localhost:5173"
+# Add your production domains (Vercel, VPS, etc.)
+CORS_ORIGIN="http://localhost:3000,http://localhost:5173,http://srv36.mikr.us:3000,https://pokedex-87cl.vercel.app,https://pokedex-n7cs.vercel.app"
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
